added sitemap seo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,19 +2,82 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>
+      TR Baking Equipments | Rotary Rack Oven, Spiral Mixer, Deck Oven,
+      Planetary Mixer, Dough Sheeter
+    </title>
+
     <meta
       name="description"
-      content="Premium bakery equipment for professional and home bakers. Quality mixers, ovens, and tools with expert consultation and support."
+      content="World-class bakery equipment including rotary rack ovens, spiral mixers, planetary mixers, deck ovens, and sheeters. Trusted by professional bakers worldwide."
     />
-    <title>TR Baking Equipments - Premium Bakery Equipment</title>
+    <meta
+      name="keywords"
+      content="bakery equipment, rotary rack oven, spiral mixer, planetary mixer, deck oven, dough sheeter, commercial baking machines, TR Baking Equipments"
+    />
+    <meta name="author" content="TR Baking Equipments" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://trbakingequipments.com/" />
+
+    <!-- Open Graph (for Facebook and others) -->
+    <meta
+      property="og:title"
+      content="TR Baking Equipments | Premium Bakery Machinery"
+    />
+    <meta
+      property="og:description"
+      content="Commercial bakery equipment like rack ovens, spiral mixers, deck ovens and more – trusted by professionals globally."
+    />
+    <meta
+      property="og:image"
+      content="https://trbakingequipments.com/assets/cover.png"
+    />
+    <meta property="og:url" content="https://trbakingequipmentscom/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="TR Baking Equipments | Premium Bakery Machinery"
+    />
+    <meta
+      name="twitter:description"
+      content="Best-in-class bakery equipment for professionals. Explore rotary rack ovens, planetary mixers, and more."
+    />
+    <meta
+      name="twitter:image"
+      content="https://trbakingequipments/assets/cover.jpg"
+    />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Structured Data for Business and Product -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "TR Baking Equipments",
+        "url": "https://trbakingequipments.com",
+        "logo": "https://trbakingequipments.com/assets/tr-logo-1.webp",
+        "description": "World-class commercial bakery machines – including rotary rack ovens, spiral mixers, planetary mixers and more.",
+        "founder": "Your Name",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+91-7021356127",
+          "contactType": "Customer Support"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
