added dynamic products for seo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,55 +2,62 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>
-      TR Baking Equipments | Rotary Rack Oven, Spiral Mixer, Deck Oven,
-      Planetary Mixer, Dough Sheeter
+      TR Baking Equipments | Commercial Bakery Machines Manufacturer
     </title>
 
     <meta
       name="description"
-      content="World-class bakery equipment including rotary rack ovens, spiral mixers, planetary mixers, deck ovens, and sheeters. Trusted by professional bakers worldwide."
+      content="Buy world-class bakery equipment: rotary rack ovens, spiral mixers, planetary mixers, dough sheeters, and more from TR Baking Equipments – trusted by professional bakers."
     />
     <meta
       name="keywords"
-      content="bakery equipment, rotary rack oven, spiral mixer, planetary mixer, deck oven, dough sheeter, commercial baking machines, TR Baking Equipments"
+      content="bakery equipment, rotary rack oven, spiral mixer, planetary mixer, dough sheeter, commercial baking machines, bakery ovens India, TR Baking Equipments"
     />
-    <meta name="author" content="TR Baking Equipments" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://trbakingequipments.com/" />
+    <link rel="canonical" href="https://www.trbakingequipments.com/" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <meta name="theme-color" content="#ffffff" />
+    <link
+      rel="sitemap"
+      type="application/xml"
+      title="Sitemap"
+      href="/sitemap.xml"
+    />
 
-    <!-- Open Graph (for Facebook and others) -->
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.trbakingequipments.com/" />
     <meta
       property="og:title"
-      content="TR Baking Equipments | Premium Bakery Machinery"
+      content="TR Baking Equipments | Commercial Bakery Machines Manufacturer"
     />
     <meta
       property="og:description"
-      content="Commercial bakery equipment like rack ovens, spiral mixers, deck ovens and more – trusted by professionals globally."
+      content="Explore rotary rack ovens, spiral mixers, dough sheeters and more. Precision-built bakery equipment for professionals."
     />
     <meta
       property="og:image"
-      content="https://trbakingequipments.com/assets/cover.png"
+      content="https://www.trbakingequipments.com/assets/cover.png"
     />
-    <meta property="og:url" content="https://trbakingequipmentscom/" />
-    <meta property="og:type" content="website" />
 
-    <!-- Twitter Card -->
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://www.trbakingequipments.com/" />
     <meta
       name="twitter:title"
-      content="TR Baking Equipments | Premium Bakery Machinery"
+      content="TR Baking Equipments | Commercial Bakery Machines Manufacturer"
     />
     <meta
       name="twitter:description"
-      content="Best-in-class bakery equipment for professionals. Explore rotary rack ovens, planetary mixers, and more."
+      content="Buy premium bakery equipment: rotary rack ovens, mixers, sheeters and more for commercial baking needs."
     />
     <meta
       name="twitter:image"
-      content="https://trbakingequipments/assets/cover.jpg"
+      content="https://www.trbakingequipments.com/assets/cover.png"
     />
 
     <!-- Fonts -->
@@ -61,20 +68,36 @@
       rel="stylesheet"
     />
 
-    <!-- Structured Data for Business and Product -->
+    <!-- Structured Data -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "TR Baking Equipments",
-        "url": "https://trbakingequipments.com",
-        "logo": "https://trbakingequipments.com/assets/tr-logo-1.webp",
-        "description": "World-class commercial bakery machines – including rotary rack ovens, spiral mixers, planetary mixers and more.",
-        "founder": "Your Name",
+        "url": "https://www.trbakingequipments.com",
+        "logo": "https://www.trbakingequipments.com/assets/tr-logo-1.webp",
+        "sameAs": [
+          "https://www.facebook.com/TRBakingEquipments",
+          "https://www.instagram.com/TRBakingEquipments"
+        ],
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+91-7021356127",
           "contactType": "Customer Support"
+        }
+      }
+    </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "TR Baking Equipments",
+        "url": "https://www.trbakingequipments.com",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://www.trbakingequipments.com/equipment?category={search_term_string}",
+          "query-input": "required name=search_term_string"
         }
       }
     </script>
