--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,7 +75,7 @@
         "@type": "Organization",
         "name": "TR Baking Equipments",
         "url": "https://www.trbakingequipments.com",
-        "logo": "https://www.trbakingequipments.com/assets/tr-logo-1.webp",
+        "logo": "https://www.trbakingequipments.com/assets/cover.png",
         "sameAs": [
           "https://www.facebook.com/TRBakingEquipments",
           "https://www.instagram.com/TRBakingEquipments"
